This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/3/18: Fixed bug in limiting K2 coordinates entered with SetCameraArea (In
3.6).

1/3/18: Added menu option and script command to reduce an image in size with
an antialiasing filter.

1/3/18: Added script command to start Navigator Acquire when the script ends,
and a Postpone button the the Acquire dialog for setting parameters only.

1/1/18: Expanded SuffixForExtraFile command to provide suffixes for more than
one extra file to open during Navigator acquisition.

1/1/18: Added option to save multiple extra Records into separate stack
files instead of all into one.

1/1/18: Allowed up to 6 STEM channels to be obtained simultaneously during
tilt series.  Added STEM channel name to mdoc file.

12/29/17: Made truncation when saving as bytes be expressed as percentage
instead of number of pixels, be saved as a setting, and have a separate value
for single-file saving so JPEG-compressed TIFFs can look OK without adjusting
contrast.

12/29/17: Made low dose do image shift change before leaving search mode on
JEOL using PLA.

12/18/17: Add frame alignment parameters for binning to a target size to avoid
a set binning becoming inappropriate for different size frames.

12/8/17: SEM_3-6-14
12/6/17: Changed script beam size measurement from radius to diameter.

12/3/17: Added frame alignment for DE camera frames.

12/3/17: Fixed coordinates in piece put into mdoc file.

11/30/17: Enabled obtaining normalized images from AMT cameras if AMT version
is high enough (In 3.6).

11/30/17: Fixed crash from using drift correction with OneView with a
non-square subarea (In 3.6).

11/26/17: Added option to skip file properties dialog.  Started saving file
type and compression type for save single/other in settings so it would be